gateway/1.4/modules/ROOT/pages/flex-local-tls-config.adoc
= Configuring TLS Context for Flex Gateway in Local Mode
ifndef::env-site,env-github[]
include::_attributes.adoc[]
endif::[]
:imagesdir: ../assets/images
:page-mode: local

// intro and graphics for each option - linux, docker, k8s
include::partial$task-tls-config.adoc[tags=intro1;intro2;intro3;icon-table;byb;linux;sample-config-all-intro]
// configure TLS context for Flex Gateway as a Linux Service
+
include::partial$task-tls-config.adoc[tags=sample-config-all]
+
include::partial$task-tls-config.adoc[tags=sample-config-instance-intro]
+
include::partial$task-tls-config.adoc[tags=sample-config-instance]
+
include::partial$task-tls-config.adoc[tags=sample-config-mtls-intro]
+
include::partial$task-tls-config.adoc[tags=sample-config-mtls]
+
include::partial$task-tls-config.adoc[tags=sample-config-mtls-outbound-intro]
+
include::partial$task-tls-config.adoc[tags=sample-config-mtls-outbound]
+
include::partial$task-tls-config.adoc[tags=verify-config]
+
include::partial$task-tls-config.adoc[tags=config-ref]

// configure TLS context for Flex Gateway in a Docker container
include::partial$task-tls-config.adoc[tags=docker-intro]
+
include::partial$task-reg-run-flex-gateway.adoc[tags=start-command-local]
+
include::partial$task-tls-config.adoc[tags=sample-config-all-intro]
+
include::partial$task-tls-config.adoc[tags=sample-config-all]
+
include::partial$task-tls-config.adoc[tags=sample-config-instance-intro]
+
include::partial$task-tls-config.adoc[tags=sample-config-instance]
+
include::partial$task-tls-config.adoc[tags=sample-config-mtls-intro]
+
include::partial$task-tls-config.adoc[tags=sample-config-mtls]
+
include::partial$task-tls-config.adoc[tags=sample-config-mtls-outbound-intro]
+
include::partial$task-tls-config.adoc[tags=sample-config-mtls-outbound]
+
include::partial$task-tls-config.adoc[tags=verify-config]
+
include::partial$task-tls-config.adoc[tags=config-ref]

//configure TLS context for Flex Gateway as an K8s Ingress Controller
include::partial$task-tls-config.adoc[tags=k8s-intro]

include::partial$task-tls-config.adoc[tags=sample-config-all-intro]

include::partial$task-tls-config.adoc[tags=sample-config-all]

include::partial$task-tls-config.adoc[tags=sample-config-instance-intro]

include::partial$task-tls-config.adoc[tags=sample-config-instance]

include::partial$task-tls-config.adoc[tags=sample-config-mtls-intro]

include::partial$task-tls-config.adoc[tags=sample-config-mtls]

include::partial$task-tls-config.adoc[tags=sample-config-mtls-outbound-intro]

include::partial$task-tls-config.adoc[tags=sample-config-mtls-outbound;config-ref]

== See Also

* xref:flex-conn-tls-config.adoc[Configuring TLS Context for Flex Gateway in Connected Mode]
* xref:policies::policies-included-tls.adoc[]
* xref:policies::policies-included-tls-outbound.adoc[]